# rustfs

./: .config  CHANGELOG.md  Cargo.toml  Kconfig  README.md  build.rs  configure.sh  install.sh
.cargo/: config.toml
configs/: default_defconfig  minimal_defconfig  systemd_defconfig  sysvinit_defconfig
manual/: index.html
qemu-test/: applet_tests.sh  mkinitramfs.sh  parse.sh  run.sh  run_matrix.sh
scripts/: add_applet.sh
src/: main.rs
src/applets/: addgroup.rs  adduser.rs  adjtimex.rs  ar.rs  arp.rs  arping.rs  awk.rs  base64cmd.rs  basename.rs  beep.rs  blkid.rs  bunzip2.rs  bzcat.rs  bzip2.rs  cal.rs  cat.rs  catv.rs  chattr.rs  chgrp.rs  chmod.rs  chown.rs  chroot.rs  chrt.rs  chvt.rs  cksum.rs  clear.rs  cmp.rs  comm.rs  cp.rs  cryptpw.rs  cut.rs  date.rs  dc.rs  dd.rs  deallocvt.rs  delgroup.rs  deluser.rs  depmod.rs  devmem.rs  df.rs  (+169 more)
src/applets/init/: mod.rs  rustfs_init.rs  systemd_compat.rs  sysvinit.rs
