# <purpose of file>
#
# Copyright (C) 2026 by Anandkumar  <Truchip >
#
# Licensed under MIT
[package]
name = "rustfs"
version = "1.2.0"
edition = "2021"
description = "Rust-based rootfs utilities — safe, correct, and fast"
license = "MIT"

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(init)', 'cfg(init_rustfs)', 'cfg(init_sysvinit)', 'cfg(init_systemd)',
    'cfg(mdev)', 'cfg(udev)',
    'cfg(applet_cat)', 'cfg(applet_cp)', 'cfg(applet_mv)', 'cfg(applet_rm)',
    'cfg(applet_mkdir)', 'cfg(applet_rmdir)', 'cfg(applet_ls)', 'cfg(applet_touch)',
    'cfg(applet_ln)', 'cfg(applet_chmod)', 'cfg(applet_head)', 'cfg(applet_tail)',
    'cfg(applet_tee)', 'cfg(applet_wc)', 'cfg(applet_du)', 'cfg(applet_df)',
    'cfg(applet_stat)', 'cfg(applet_readlink)', 'cfg(applet_echo)', 'cfg(applet_printf)',
    'cfg(applet_grep)', 'cfg(applet_sed)', 'cfg(applet_sort)', 'cfg(applet_uniq)',
    'cfg(applet_tr)', 'cfg(applet_cut)', 'cfg(applet_paste)', 'cfg(applet_fold)',
    'cfg(applet_rev)', 'cfg(applet_nl)', 'cfg(applet_basename)', 'cfg(applet_dirname)',
    'cfg(applet_pwd)', 'cfg(applet_realpath)', 'cfg(applet_base64)', 'cfg(applet_md5sum)',
    'cfg(applet_sha256sum)', 'cfg(applet_xxd)', 'cfg(applet_uname)', 'cfg(applet_hostname)',
    'cfg(applet_whoami)', 'cfg(applet_id)', 'cfg(applet_uptime)', 'cfg(applet_date)',
    'cfg(applet_env)', 'cfg(applet_printenv)', 'cfg(applet_sleep)', 'cfg(applet_yes)',
    'cfg(applet_true)', 'cfg(applet_false)', 'cfg(applet_nohup)', 'cfg(applet_seq)',
    'cfg(applet_tty)', 'cfg(applet_which)', 'cfg(applet_xargs)', 'cfg(applet_find)',
    'cfg(applet_test)', 'cfg(applet_expr)',
    'cfg(applet_addgroup)', 'cfg(applet_adduser)', 'cfg(applet_ar)', 'cfg(applet_arp)',
    'cfg(applet_arping)', 'cfg(applet_awk)', 'cfg(applet_blkid)', 'cfg(applet_bunzip2)',
    'cfg(applet_bzcat)', 'cfg(applet_bzip2)', 'cfg(applet_chgrp)', 'cfg(applet_chown)',
    'cfg(applet_clear)', 'cfg(applet_dd)', 'cfg(applet_delgroup)', 'cfg(applet_deluser)',
    'cfg(applet_diff)', 'cfg(applet_dmesg)', 'cfg(applet_dos2unix)', 'cfg(applet_fbset)',
    'cfg(applet_fdisk)', 'cfg(applet_fsck)',
    'cfg(applet_fsync)', 'cfg(applet_ftpd)', 'cfg(applet_ftpget)', 'cfg(applet_ftpput)',
    'cfg(applet_fuser)', 'cfg(applet_getopt)', 'cfg(applet_getty)', 'cfg(applet_gunzip)',
    'cfg(applet_gzip)', 'cfg(applet_hd)', 'cfg(applet_hexdump)', 'cfg(applet_hostid)',
    'cfg(applet_httpd)', 'cfg(applet_hwclock)', 'cfg(applet_ifconfig)', 'cfg(applet_ifdown)',
    'cfg(applet_ifup)', 'cfg(applet_insmod)', 'cfg(applet_install)', 'cfg(applet_ip)',
    'cfg(applet_ipaddr)', 'cfg(applet_ipcalc)', 'cfg(applet_ipcrm)', 'cfg(applet_ipcs)',
    'cfg(applet_kill)', 'cfg(applet_killall)', 'cfg(applet_klogd)', 'cfg(applet_last)',
    'cfg(applet_length)', 'cfg(applet_less)', 'cfg(applet_logger)', 'cfg(applet_login)',
    'cfg(applet_logname)', 'cfg(applet_logread)', 'cfg(applet_losetup)', 'cfg(applet_lsmod)',
    'cfg(applet_mount)', 'cfg(applet_umount)', 'cfg(applet_rmmod)',
    'cfg(applet_kexec)', 'cfg(applet_switch_root)', 'cfg(applet_chroot)',
    'cfg(applet_depmod)', 'cfg(applet_modprobe)', 'cfg(applet_modinfo)',
    'cfg(applet_sh)',
    'cfg(applet_ps)', 'cfg(applet_free)', 'cfg(applet_sync)',
    'cfg(applet_mktemp)', 'cfg(applet_nproc)', 'cfg(applet_tac)',
    'cfg(applet_timeout)', 'cfg(applet_od)', 'cfg(applet_truncate)',
    'cfg(applet_strings)', 'cfg(applet_cmp)',
    'cfg(applet_comm)', 'cfg(applet_cal)', 'cfg(applet_cksum)', 'cfg(applet_sum)',
    'cfg(applet_expand)', 'cfg(applet_unexpand)', 'cfg(applet_split)',
    'cfg(applet_uuencode)', 'cfg(applet_uudecode)', 'cfg(applet_unix2dos)',
    'cfg(applet_dnsdomainname)', 'cfg(applet_dc)', 'cfg(applet_sha1sum)',
    'cfg(applet_sha512sum)',
    'cfg(applet_pidof)', 'cfg(applet_pgrep)', 'cfg(applet_pkill)',
    'cfg(applet_killall5)', 'cfg(applet_setsid)', 'cfg(applet_usleep)',
    'cfg(applet_nice)', 'cfg(applet_renice)', 'cfg(applet_ionice)',
    'cfg(applet_chrt)', 'cfg(applet_taskset)', 'cfg(applet_who)',
    'cfg(applet_mesg)', 'cfg(applet_ttysize)', 'cfg(applet_watch)',
    'cfg(applet_time)', 'cfg(applet_mountpoint)', 'cfg(applet_pivot_root)',
    'cfg(applet_mknod)', 'cfg(applet_mkfifo)', 'cfg(applet_devmem)',
    'cfg(applet_eject)', 'cfg(applet_freeramdisk)', 'cfg(applet_swapon)',
    'cfg(applet_swapoff)', 'cfg(applet_sysctl)', 'cfg(applet_findfs)',
    'cfg(applet_mkswap)', 'cfg(applet_rdev)', 'cfg(applet_lsattr)',
    'cfg(applet_chattr)', 'cfg(applet_fdformat)', 'cfg(applet_hdparm)',
    'cfg(applet_flash_lock)', 'cfg(applet_flash_unlock)', 'cfg(applet_readprofile)',
    'cfg(applet_rtcwake)', 'cfg(applet_adjtimex)', 'cfg(applet_raidautorun)',
    'cfg(applet_fdflush)',
] }

[features]
# Enable for fully static musl builds: bundles libbz2 from source
static-bin = ["bzip2/static"]

[dependencies]
chrono = "0.4"
glob = "0.3"
regex = "1"
libc = "0.2"
base64 = "0.22"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
walkdir = "2"
bzip2 = "0.5"
flate2 = "1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs", "process", "signal", "user", "hostname", "net"] }
users = "0.11"

[profile.release]
opt-level = "z"        # optimize aggressively for size
lto = "fat"           # whole-program link-time optimization
codegen-units = 1     # better cross-module size optimization (no parallel splitting)
strip = true          # strip symbols and debug info from the binary
panic = "abort"       # drop unwinding tables / landing pads
incremental = false
overflow-checks = false
